--- a/styles/service-sidebar.less
+++ b/styles/service-sidebar.less
@@ -221,6 +221,7 @@
     .service-tree,
     .search-results {
       position: relative;
+      margin-top: @sidebar-height;
       overflow-y: auto;
       -webkit-overflow-scrolling: touch; // Makes iOS use momentum scrolling.
     }
